fix: never hide the scrollbar to avoid bad UX

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -43,7 +43,7 @@
 }
 
 body {
-  overflow-y: auto;
+  overflow-y: auto !important;
   overflow-x: hidden;
   margin: 0;
   -webkit-font-smoothing: antialiased;
